FIXED: Dashboard: System resources applet - values must also have nowrap specification.

--- a/modules/trunk/core/system/modules/dashboard/themes/default/css/1_style.css
+++ b/modules/trunk/core/system/modules/dashboard/themes/default/css/1_style.css
@@ -390,6 +390,7 @@ div.neo-applet-tdesc {
 	top:0px;
 	float:left;
 	margin-left: 15%;
+    white-space:nowrap;
 }
 div.neo-clearing {
 	clear:both;
